devops/k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: timothy-miller.xyz
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: conferencing-service
              servicePort: 3000
